ajout du mode display/block sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
                 <ul class="navbar-nav mr-auto">
                     <div class="hover"></div>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#plantesInt">Plantes d'intérieur</a>
+                        <a class="nav-link" id="plantesIntNav" href="#plantesInt">Plantes d'intérieur</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#plantesExt">Plantes d'extérieur</a>
+                        <a class="nav-link" id="plantesExtNav" href="#plantesExt">Plantes d'extérieur</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#bouquets">Bouquets de fleurs séchées</a>
+                        <a class="nav-link" id="bouquetsNav" href="#bouquets">Bouquets de fleurs séchées</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" id="homeNav" href="#all-products">Tous nos produits</a>
                     </li>
                 </ul>
                 <a href="#index" class="navbar-brand mx-auto">
-                    <img src="assets/img/SoCrisTo.png" class="img-responsive">
+                <img src="assets/img/SoCrisTo.png" class="img-responsive">
                 </a>
             </div>
             <a href="#panier">
@@ -107,7 +110,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="opacity">
-                                <img src="assets/img/carousel/2.jpeg" class="d-block w-100" alt="...">
+                                <img src="assets/img/carousel/5.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-caption justify-content-center align-items-center">
                                 <h4>Nos garanties</h4>
@@ -137,8 +140,8 @@
         </div>
 
         <!-- Catégorie Produits -->
-        <div class="products">
-            <div class="row justify-content-center">
+        <div class="products" id="all-products">
+            <div class="row justify-content-center" id="test">
                 <h1 class="col-sm text-center mt-5 mb-4">Nos produits</h1>
             </div>
             <!-- Sous-Catégorie Plantes d'intérieur -->
@@ -414,7 +417,7 @@
                     <img src="assets/img/livraisonLogo.png">
                     <p>Livraison gratuite à partir de 50€</p></img>
                 </div>
-                <div class="iconesLast center"><img src="assets/img/sav.jpg">
+                <div class="iconesLast center"><img src="assets/img/sav.png">
                     <p>Meilleur SAV</p></img>
                 </div>
             </div>
