--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <!-- Catégorie Produits -->
         <div class="products" id="all-products">
-            <div class="row justify-content-center" id="test">
+            <div class="row justify-content-center" id="prod">
                 <h1 class="col-sm text-center mt-5 mb-4">Nos produits</h1>
             </div>
             <!-- Sous-Catégorie Plantes d'intérieur -->
