maj display&hide + ancres

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
                 <ul class="navbar-nav mr-auto">
                     <div class="hover"></div>
                     <li class="nav-item active">
-                        <a class="nav-link" id="plantesIntNav" href="#plantesInt">Plantes d'intérieur</a>
+                        <a class="nav-link" id="plantesIntNav" href="#all-products">Plantes d'intérieur</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" id="plantesExtNav" href="#plantesExt">Plantes d'extérieur</a>
+                        <a class="nav-link" id="plantesExtNav" href="#all-products">Plantes d'extérieur</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" id="bouquetsNav" href="#bouquets">Bouquets de fleurs séchées</a>
+                        <a class="nav-link" id="bouquetsNav" href="#all-products">Bouquets de fleurs séchées</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" id="homeNav" href="#all-products">Tous nos produits</a>
                     </li>
                 </ul>
                 <a href="#index" class="navbar-brand mx-auto">
-                <img src="assets/img/SoCrisTo.png" class="img-responsive">
+                    <img src="assets/img/SoCrisTo.png" class="img-responsive">
                 </a>
             </div>
             <a href="#panier">
@@ -154,7 +154,8 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Roger</h3>
-                                <img class="card-img-top" src="assets/img/monstera.png" alt="Plante Monstera en pot">
+                                <img class="card-img-top btn" src="assets/img/monstera.png" alt="Plante Monstera en pot"
+                                    type="button" data-toggle="modal" data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">15 €</span>
@@ -173,8 +174,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Josette</h3>
-                                <img class="card-img-top" src="assets/img/begoniamaculata.jpg"
-                                    alt="Plante Begonia Maculata en pot">
+                                <img class="card-img-top btn" src="assets/img/begoniamaculata.jpg"
+                                    alt="Plante Begonia Maculata en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">12.50 €</span>
@@ -193,8 +195,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Antoine</h3>
-                                <img class="card-img-top" src="assets/img/aphelandra.jpg"
-                                    alt="Plante Alephandra en pot">
+                                <img class="card-img-top btn" src="assets/img/aphelandra.jpg"
+                                    alt="Plante Alephandra en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">20 €</span>
@@ -213,8 +216,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Mireille</h3>
-                                <img class="card-img-top" src="assets/img/zamioculcas.jpg"
-                                    alt="Plante Zamioculcas en pot">
+                                <img class="card-img-top btn" src="assets/img/zamioculcas.jpg"
+                                    alt="Plante Zamioculcas en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">15 €</span>
@@ -241,8 +245,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Solange</h3>
-                                <img class="card-img-top" src="assets/img/herbechat.jpg"
-                                    alt="Plante d'herbe à chat en pot">
+                                <img class="card-img-top btn" src="assets/img/herbechat.jpg"
+                                    alt="Plante d'herbe à chat en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">4.50 €</span>
@@ -261,8 +266,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Jean-Claude</h3>
-                                <img class="card-img-top" src="assets/img/pernettyaext.jpg"
-                                    alt="Plante Pernettya en pot">
+                                <img class="card-img-top btn" src="assets/img/pernettyaext.jpg"
+                                    alt="Plante Pernettya en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">7.50 €</span>
@@ -281,8 +287,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Laurette</h3>
-                                <img class="card-img-top" src="assets/img/helleborusext.jpg"
-                                    alt="Plante Helleborus en pot">
+                                <img class="card-img-top btn" src="assets/img/helleborusext.jpg"
+                                    alt="Plante Helleborus en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">20 €</span>
@@ -301,7 +308,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">René</h3>
-                                <img class="card-img-top" src="assets/img/aloevera.jpg" alt="Plante Aloe Vera en pot">
+                                <img class="card-img-top btn" src="assets/img/aloevera.jpg"
+                                    alt="Plante Aloe Vera en pot" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">11.50 €</span>
@@ -329,7 +338,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Lionel</h3>
-                                <img class="card-img-top" src="assets/img/Lionel.png" alt="Bouquet de fleurs séchées">
+                                <img class="card-img-top btn" src="assets/img/Lionel.png"
+                                    alt="Bouquet de fleurs séchées" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">5.50 €</span>
@@ -348,7 +359,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Pamela</h3>
-                                <img class="card-img-top" src="assets/img/pamela.jpg" alt="Bouquet de fleurs séchées">
+                                <img class="card-img-top btn" src="assets/img/pamela.jpg"
+                                    alt="Bouquet de fleurs séchées" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">6.50 €</span>
@@ -367,7 +380,8 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Louis</h3>
-                                <img class="card-img-top" src="assets/img/Louis.jpg" alt="Bouquet de fleurs séchées">
+                                <img class="card-img-top btn" src="assets/img/Louis.jpg" alt="Bouquet de fleurs séchées"
+                                    type="button" data-toggle="modal" data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">10 €</span>
@@ -386,7 +400,9 @@
                         <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Hélène</h3>
-                                <img class="card-img-top" src="assets/img/hélène.png" alt="Bouquet de fleurs séchées">
+                                <img class="card-img-top btn" src="assets/img/hélène.png"
+                                    alt="Bouquet de fleurs séchées" type="button" data-toggle="modal"
+                                    data-target="#exampleModal">
                                 <div class="row">
                                     <div class="col text-left mt-3">
                                         <span class="card-text">15 €</span>
@@ -419,6 +435,29 @@
                 </div>
                 <div class="iconesLast center"><img src="assets/img/sav.png">
                     <p>Meilleur SAV</p></img>
+                </div>
+            </div>
+        </div>
+
+        <!-- Fenêtre modale de description produit -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Description du produit</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Le Chamaedora Elegans est une plante qui demande très peu d'attention. L'arrosage se fera une
+                        fois par
+                        semaine en moyenne. Il préfère une exposition à mi ombre et trouvera très facilement sa place
+                        chez vous.<br>
+                        <br>Son allure originale en fait une plante décorative que vous pourrez
+                        garder des années.<br><br>
+                        Plante vendue seule, cache-pot non compris.
+                    </div>
                 </div>
             </div>
         </div>
