changement ancre, maj background et navbar

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <div class="col-lg-10 col-md-8 col-sm-8 col-8 mx-auto mt-4">
             <div class="row justify-content-between text-center">
                 <div class="iconesLastSecond center"><img src="assets/img/bestLogo.png">
-                    <p>Excellente qualité</p></img>
+                    <p>Label Plante bleue</p></img>
                 </div>
                 <div class="iconesLastFirst center">
                     <p></p>
@@ -434,7 +434,7 @@
                     <p>Livraison gratuite à partir de 50€</p></img>
                 </div>
                 <div class="iconesLast center"><img src="assets/img/sav.png">
-                    <p>Meilleur SAV</p></img>
+                    <p>Elu Meilleur SAV 2020</p></img>
                 </div>
             </div>
         </div>
@@ -488,7 +488,7 @@
                             <a href="#"><span><i class="fa fa-instagram fa-2x"></i></span></a></p>
                     </div>
                 </div>
-                <div class="footerRight col-lg-4 col-md-4 col-sm-4 justify-content-right">
+                <div class="footerRight col-lg-4 col-md-4 col-sm-4 justify-content-right align-middle">
                     <div id=footerRight>
                         <h2 class="titleFooter text-white" id="titleFooter"><span>Outhone</span></h2>
                         <h4 class="soustitleFooter"><span>Boutique de plantes</span></h4>
