modif input panier

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                         <table class="table table-responsive table-hover" id="cartTable">
                             <thead>
                                 <tr>
-                                    <th scope="col" class="text-left">Nom du produit</th>
-                                    <th scope="col" class="text-left">Référence article</th>
-                                    <th scope="col" class="text-left">Prix unitaire</th>
-                                    <th scope="col" class="text-center">Quantité</th>
+                                    <th scope="col" width="200" class="text-left">Nom du produit</th>
+                                    <th scope="col" width="200" class="text-left">Référence article</th>
+                                    <th scope="col" width="200" class="text-left">Prix unitaire</th>
+                                    <th scope="col" width="200" class="text-center">Quantité</th>
                                     <th scope="col" width="200" class="text-center">Total</th>
                                     <th scope="col" width="200" class="text-center">Action</th>
                                 </tr>
@@ -428,13 +428,13 @@
                 <div class="iconesLastSecond center"><img src="assets/img/bestLogo.png">
                     <p>Label Plante bleue</p></img>
                 </div>
+                <div class="iconesLast center"><img src="assets/img/sav.png">
+                    <p>Elu Meilleur SAV 2020</p></img>
+                </div>
                 <div class="iconesLastFirst center">
                     <p></p>
                     <img src="assets/img/livraisonLogo.png">
                     <p>Livraison gratuite à partir de 50€</p></img>
-                </div>
-                <div class="iconesLast center"><img src="assets/img/sav.png">
-                    <p>Elu Meilleur SAV 2020</p></img>
                 </div>
             </div>
         </div>
