révisions tableau et modif navigation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </li>
                 </ul>
                 <a href="#index" class="navbar-brand mx-auto">
-                    <img src="assets/img/SoCrisTo.png" class="img-responsive">
+                    <img src="assets/img/SoCrisTo.png" class="img-responsive" id="homeNav" href="#all-products">
                 </a>
             </div>
             <a href="#panier">
