MAJ comments tableau js

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <th scope="col" width="200" class="text-center">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="cartTableBody">
                             </tbody>
                         </table>
                         <div class="text-right font-weight-bold">Total TTC : <span id="result"></span></div>
